--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Ye’s ML Cafe" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Ye Yan"},"description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About","url":"/about/","@type":"WebSite","name":"Ye’s ML Cafe","@context":"https://schema.org"}</script>
+{"author":{"@type":"Person","name":"Ye Yan"},"headline":"About","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","url":"/about/","@type":"WebSite","name":"Ye’s ML Cafe","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/styles.css">
     <script type="text/javascript" async
