--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="/404.html" />
 <meta property="og:site_name" content="Ye’s ML Cafe" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Ye Yan"},"description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Ye’s ML Cafe","url":"/404.html","@type":"WebPage","@context":"https://schema.org"}</script>
+{"author":{"@type":"Person","name":"Ye Yan"},"headline":"Ye’s ML Cafe","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","url":"/404.html","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/styles.css">
     <script type="text/javascript" async
